--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ align-items: center;
     display:flex;
     justify-content: center;
     font-size: 150px;
-    font-family: nikeflix outline; 
+    font-family: Nikeflix Outline; 
     color: #dd5444;
     z-index: 6;
    margin: 0;
