--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .name{
-    font-family: Old London Alternate;
+    font-family: 'Old London Alternate';
     color:black;
     font-size:50px;
     text-align: center;
