--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     text-align: center;
 }
 ul{
-    font-family:"Old London Alternate";
+    font-family:'Old London Alternate';
     font-size: 30px;
     display:flex;
     justify-content: space-evenly;
@@ -352,4 +352,4 @@ align-items: center;
    margin: 0;
    padding-top: 20px;
  }
- @font-face {font-family:"Old London Alternate";src:url("OldLondonAlternate.svg#OldLondonAlternate") format("svg");font-weight:normal;font-style:normal;}
+ @font-face {font-family:"Old London Alternate";src:url("OldLondonAlternate.ttf") format("truetype");font-weight:normal;font-style:normal;}
