--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ align-items: center;
     font-size: 30px;
     display: flex;
     float: left;
-    font-family: Old London Alternate;
+    font-family: "Old London Alternate";
     margin:auto;
     align-content: right;
     text-align: right;
