--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     text-align: center;
 }
 ul{
-    font-family:'Old London Alternate';
+    font-family:"Old London Alternate";
     font-size: 30px;
     display:flex;
     justify-content: space-evenly;
