--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,6 @@ align-items: center;
    padding-top: 20px;
  }
  @font-face {
-  font-family: 'Old London';
-  src: url('https://www.fontsaddict.com/fontface/old-london.ttf');
+  font-family: 'Old London Alternate';
+  src: url('https://www.fontsaddict.com/fontface/old-london-alternate.ttf');
 }
