--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ align-items: center;
    align-items: center;
     align-self: center;
     align-content: center;
-    font-family: old london alternate;
+    font-family: Old London Alternate;
     margin:auto;
 }
 .skillp{
@@ -125,7 +125,7 @@ align-items: center;
     font-size: 30px;
     display: flex;
     float: left;
-    font-family: "Old London Alternate";
+    font-family: Old London Alternate;
     margin:auto;
     align-content: right;
     text-align: right;
@@ -196,7 +196,7 @@ ul{
     padding: 0 20px;
     font-size: 1rem;
     color: black;
-    font-family: "Old London";
+    font-family: Old London Alternate;
     border-radius: 10px;
     background-color: #fff8e0;
     font-size: 25px;
