--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,8 @@ align-items: center;
     display:flex;
     justify-content: center;
     font-size: 150px;
-    font-family: 'Royal AcidBath Outline'; 
+    font-family: Royal Acidbath;
+    text-align: center;
     color: #dd5444;
     z-index: 6;
    margin: 0;
@@ -359,9 +360,7 @@ align-items: center;
 }
 @font-face {
   font-family: 'Royal Acidbath Outline';
-  src: url('https://www.fontsaddict.com/fontface/royal-acidbath-outline.ttf');
+  font-family: 'Uberhölme Outline';
+  src: url('https://www.fontsaddict.com/fontface/uberholme-outline.ttf');
 }
-@font-face {
-  font-family: 'Royal Acidbath Outline';
-  src: url('https://www.fontsaddict.com/fontface/royal-acidbath-outline.ttf');
-}
+	
