--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ align-items: center;
     display:flex;
     justify-content: center;
     font-size: 150px;
-    font-family: Royal Acidbath;
+    font-family: 'KG LET HER GO OUTLINE';
     text-align: center;
     color: #dd5444;
     z-index: 6;
@@ -358,9 +358,12 @@ align-items: center;
   font-family: 'Old London Alternate';
   src: url('https://www.fontsaddict.com/fontface/old-london-alternate.ttf');
 }
+
 @font-face {
-  font-family: 'Royal Acidbath Outline';
-  font-family: 'Uberhölme Outline';
-  src: url('https://www.fontsaddict.com/fontface/uberholme-outline.ttf');
+  font-family: 'Minim Outline ExtraBold';
+  src: url('https://www.fontsaddict.com/fontface/minim-outline-extrabold.ttf');
 }
-	
+@font-face {
+  font-family: 'KG LET HER GO OUTLINE';
+  src: url('https://www.fontsaddict.com/fontface/kg-let-her-go-outline.ttf');
+}
