--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ align-items: center;
     display:flex;
     justify-content: center;
     font-size: 150px;
-    font-family: KG LET HER GO OUTLINE;
+    font-family:KG LET HER GO Outline;
     text-align: center;
     color: #dd5444;
     z-index: 6;
@@ -359,10 +359,6 @@ align-items: center;
   src: url('https://www.fontsaddict.com/fontface/old-london-alternate.ttf');
 }
 
-@font-face {
-  font-family: 'Minim Outline ExtraBold';
-  src: url('https://www.fontsaddict.com/fontface/minim-outline-extrabold.ttf');
-}
 @font-face {
   font-family: 'KG LET HER GO OUTLINE';
   src: url('https://www.fontsaddict.com/fontface/kg-let-her-go-outline.ttf');
