--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .name{
-  font-family: 'Old London Alternate', sans-serif;
+  font-family: Old London Alternate;
     color:black;
     font-size:50px;
     text-align: center;
@@ -347,7 +347,7 @@ align-items: center;
     display:flex;
     justify-content: center;
     font-size: 150px;
-    font-family:KG LET HER GO Outline;
+    font-family:Impact;
     text-align: center;
     color: #dd5444;
     z-index: 6;
