--- a/css/style.css
+++ b/css/style.css
@@ -347,7 +347,7 @@ align-items: center;
     display:flex;
     justify-content: center;
     font-size: 150px;
-    font-family: 'MADE TOMMY Outline';
+    font-family: 'KG LET HER GO OUTLINE', sans-serif;
     text-align: center;
     color: #dd5444;
     z-index: 6;
