--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     display:flex;
     justify-content: space-around;
     margin: 50px;
+   
 
 }
 
@@ -347,7 +348,7 @@ align-items: center;
     display:flex;
     justify-content: center;
     font-size: 150px;
-    font-family: KG-LET-HER-GO-OUTLINE;
+    font-family: KG LET HER GO OUTLINE;
     text-align: center;
     color: #dd5444;
     z-index: 6;
